--- a/about.html
+++ b/about.html
@@ -20,9 +20,9 @@ header-img: "img/post-bg-rwd.jpg"
 
     <p>Hey，我是<strong>Musen(LSH)</strong>，一只程序猿，现在重庆大学写代码和创业。</p>
 
-    <p>工作、学习之余，我还是一个运动爱好者，同时也非常喜欢电动滑板</p>
+    <p>学习、谈恋爱之余，我还是一个运动爱好者，同时也非常喜欢音乐</p>
 
-    <p>这是我的利用 <a href="https://pages.github.com/">GitHub Pages</a> 与 <a href="http://jekyll.com.cn/">Jekyll</a> 搭建的 个人博客。我在GitHub主页<a href="https://github.com/qiubaiying">👉GitHub·BY</a> 与 博客主页<a href="https://http://www.jianshu.com/u/e71990ada2fd">👉BY</a>。如果有什么问题，欢迎提出探讨~</p>
+    <p>这是我的利用 <a href="https://pages.github.com/">GitHub Pages</a> 与 <a href="http://jekyll.com.cn/">Jekyll</a> 搭建的 个人博客。我在GitHub主页<a href="https://github.com/Musenming">👉GitHub·Musen</a> 与 博客主页<a href="https://musenming.github.io/">👉Musen</a>。如果有什么问题，欢迎提出探讨~</p>
 
     <p></p>
     
