--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-description: "Thinking will not overcome fear but action will."
+description: "Wherever your heart heads, always be! "
 ---
 
 {% for post in paginator.posts %}
