--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 layout: page
 title: "About"
 description: "Hey, this is Musen."
-header-img: "img/post-bg-rwd.jpg"
+header-img: "img/right.jpg"
 ---
 
 <!-- Language Selector -->
